[package]
name = "tuplex"
version = "0.1.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = [ "tuple", "heterogeneous", "homogeneous", "convert", "array" ]
readme = "README.md"
repository = "https://github.com/oooutlk/tuplex"
documentation = "https://docs.rs/tuplex"
categories = [ "rust-patterns" ]
edition = "2018"
description = "Rust tuple extension."
